create api to register and OTP in BE